--- a/Assignment_13/Presentation/Scenes/Feed/FeedViewController.storyboard
+++ b/Assignment_13/Presentation/Scenes/Feed/FeedViewController.storyboard
@@ -15,11 +15,44 @@
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Feed" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q1f-Uh-EtE">
+                                <rect key="frame" x="17" y="52" width="88.5" height="52"/>
+                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="40"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ac3-g1-nbM">
+                                <rect key="frame" x="17" y="110.5" width="86" height="3"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="3" id="IBd-Q9-12r"/>
+                                    <constraint firstAttribute="width" constant="86" id="McE-48-Azg"/>
+                                </constraints>
+                            </imageView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="j7C-RT-dem">
+                                <rect key="frame" x="0.0" y="114.5" width="414" height="698.5"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="ac3-g1-nbM" firstAttribute="top" secondItem="Q1f-Uh-EtE" secondAttribute="bottom" constant="6.5" id="1gi-py-4w1"/>
+                            <constraint firstItem="j7C-RT-dem" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="8hE-Yv-AwK"/>
+                            <constraint firstItem="Q1f-Uh-EtE" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="8" id="A6D-c1-ySC"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="j7C-RT-dem" secondAttribute="trailing" id="NuW-0M-yDV"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="j7C-RT-dem" secondAttribute="bottom" id="OsS-ye-MGs"/>
+                            <constraint firstItem="Q1f-Uh-EtE" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="17" id="pg4-bO-Np2"/>
+                            <constraint firstItem="j7C-RT-dem" firstAttribute="top" secondItem="ac3-g1-nbM" secondAttribute="bottom" constant="1" id="tjT-p2-pff"/>
+                            <constraint firstItem="ac3-g1-nbM" firstAttribute="leading" secondItem="Q1f-Uh-EtE" secondAttribute="leading" id="ut1-GS-dVN"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="" image="ic_feed" id="Uva-3h-XkG"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="postsTableView" destination="j7C-RT-dem" id="AgU-ul-sTM"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
